[project]
name = "roam-research-mcp"
version = "0.1.0"
description = "MCP server for Roam Research API integration"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.11.0",
    "python-dateutil>=2.9.0.post0",
    "python-dotenv>=1.1.1",
    "requests>=2.32.4",
]

[project.scripts]
roam-research-mcp = "main:mcp.run"
